The state of the focus mode is now saved between sessions
- The state (whether it is on or off) is saved in the local storage, read whenever the popup is opened and used to set the state of the toggle.
- The focus mode settings button now navigates to an empty html page.
- Changed the background color of the popup page to a darker gray.

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1770,6 +1770,11 @@ input:checked + .toggle-bg {
   background-color: rgb(31 41 55 / 0.5);
 }
 
+.dark .dark\:bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:bg-opacity-80 {
   --tw-bg-opacity: 0.8;
 }
