The user can now specify if the complete domain is blocked
- The user can specify through a checkbox if all paths of a given domain is blocked or only the exact URL that was inputted.
- Added a parseUrl method which returns an object with only the info that is necessary instead of the whole grouped array that was returned by the regex match function. The object contains the fqdn, the input and whether the complete domain is blocked (bool).
- Blocked url list now saved the above mentioned obj, instead of only the url string.
- Adjusted the method that checks the tab url to check if the whole domain is blocked or only the exact link.

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1049,14 +1049,6 @@ input:checked + .toggle-bg {
   bottom: 0px;
 }
 
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.bottom-2\.5 {
-  bottom: 0.625rem;
-}
-
 .bottom-\[60px\] {
   bottom: 60px;
 }
@@ -1089,64 +1081,20 @@ input:checked + .toggle-bg {
   top: 0.625rem;
 }
 
-.right-10 {
-  right: 2.5rem;
+.bottom-2 {
+  bottom: 0.5rem;
 }
 
-.right-20 {
-  right: 5rem;
-}
-
-.right-8 {
-  right: 2rem;
-}
-
-.right-12 {
-  right: 3rem;
-}
-
-.right-14 {
-  right: 3.5rem;
-}
-
-.right-9 {
-  right: 2.25rem;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-3 {
-  right: 0.75rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.right-6 {
-  right: 1.5rem;
-}
-
-.right-\[13\] {
-  right: 13;
-}
-
-.right-\[50px\] {
-  right: 50px;
-}
-
-.right-\[100px\] {
-  right: 100px;
-}
-
-.right-\[70px\] {
-  right: 70px;
+.bottom-2\.5 {
+  bottom: 0.625rem;
 }
 
 .bottom-3 {
   bottom: 0.75rem;
+}
+
+.right-\[70px\] {
+  right: 70px;
 }
 
 .z-10 {
@@ -1191,6 +1139,26 @@ input:checked + .toggle-bg {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.ml-2\.5 {
+  margin-left: 0.625rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .block {
@@ -1428,6 +1396,10 @@ input:checked + .toggle-bg {
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-l-lg {
@@ -1976,6 +1948,10 @@ input:checked + .toggle-bg {
   color: rgb(156 163 175 / var(--tw-placeholder-opacity));
 }
 
+.dark .dark\:ring-offset-gray-800 {
+  --tw-ring-offset-color: #1F2937;
+}
+
 .dark .dark\:hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(26 86 219 / var(--tw-bg-opacity));
@@ -2019,6 +1995,11 @@ input:checked + .toggle-bg {
 .dark .dark\:focus\:ring-blue-800:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(30 66 159 / var(--tw-ring-opacity));
+}
+
+.dark .dark\:focus\:ring-blue-600:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(28 100 242 / var(--tw-ring-opacity));
 }
 
 .dark .peer:focus ~ .dark\:peer-focus\:ring-blue-800 {
