--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1173,6 +1173,14 @@ input:checked + .toggle-bg {
   margin-top: 0.5rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -1231,6 +1239,10 @@ input:checked + .toggle-bg {
 
 .min-h-\[300px\] {
   min-height: 300px;
+}
+
+.min-h-\[500px\] {
+  min-height: 500px;
 }
 
 .w-1\/2 {
@@ -4138,6 +4150,14 @@ input:checked + .toggle-bg {
 .focus\:ring-gray-300:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
+}
+
+.disabled\:opacity-50:disabled {
+  opacity: 0.5;
+}
+
+.disabled\:opacity-25:disabled {
+  opacity: 0.25;
 }
 
 .peer:checked ~ .peer-checked\:bg-blue-600 {
