Created a wrapper around the chrome API calls
Created a browser module, which acts as a wrapper around the API calls. I've done this to make it easier later to port to browsers that don't use the chrome API (I only have to adjust the code in the wrapper) and to shorten the code and make it more readable.

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1141,10 +1141,6 @@ input:checked + .toggle-bg {
   margin-bottom: 0.5rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -1175,6 +1171,10 @@ input:checked + .toggle-bg {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .block {
@@ -1231,6 +1231,10 @@ input:checked + .toggle-bg {
 
 .h-screen {
   height: 100vh;
+}
+
+.min-h-\[300px\] {
+  min-height: 300px;
 }
 
 .min-h-\[500px\] {
